// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useDebug when debugging renders with debug values 1`] = `
<DocumentFragment>
  <div
    class="css-text-76zvg2"
    dir="auto"
  >
    true
  </div>
</DocumentFragment>
`;

exports[`useDebug when not debugging renders without debug values 1`] = `
<DocumentFragment>
  <div
    class="css-text-76zvg2"
    dir="auto"
  >
    false
  </div>
</DocumentFragment>
`;
